[WIP]: add crate movie api
