# api/handler/movie/dto.go
@@ -1,0 +1,16 @@
+package moviehandler
+
+type CreateMovieRequest struct {
+	Name         string `json:"name"`
+	Description  string `json:"description"`
+	ThumbnailUrl string `json:"thumbnailUrl"`
+	// TODO: Add more
+} // @name CreateMovieRequest
+
+type MovieDto struct {
+	Id           int32  `json:"id"`
+	Name         string `json:"name"`
+	Description  string `json:"description"`
+	ThumbnailUrl string `json:"thumbnailUrl"`
+	// TODO: Add more
+} // @name MovieDto
